--- a/K-means Clustering.ipynb
+++ b/K-means Clustering.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -32,13 +32,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\marce\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1416: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  super()._check_params_vs_input(X, default_n_init=10)\n",
-      "c:\\Users\\marce\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py:136: UserWarning: Could not find the number of physical cores for the following reason:\n",
-      "found 0 physical cores < 1\n",
-      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
-      "  warnings.warn(\n",
-      "  File \"c:\\Users\\marce\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 282, in _count_physical_cores\n",
-      "    raise ValueError(f\"found {cpu_count_physical} physical cores < 1\")\n"
+      "  super()._check_params_vs_input(X, default_n_init=10)\n"
      ]
     },
     {
@@ -195,12 +189,12 @@
     "\n",
     "Como ejemplo utilizaremos de entradas un conjunto de datos que obtuve de un proyecto propio, en el que se analizaban rasgos de la personalidad de usuarios de Twitter. He filtrado a 140 “famosos” del mundo en diferentes areas: deporte, cantantes, actores, etc. Basado en una metodología de psicología conocida como “Ocean: The Big Five” tendemos como características de entrada:\n",
     "\n",
-    "usuario (el nombre en Twitter)\n",
-    "“op” = Openness to experience – grado de apertura mental a nuevas experiencias, curiosidad, arte\n",
-    "“co” =Conscientiousness – grado de orden, prolijidad, organización\n",
-    "“ex” = Extraversion – grado de timidez, solitario o participación ante el grupo social\n",
-    "“ag” = Agreeableness – grado de empatía con los demás, temperamento\n",
-    "“ne” = Neuroticism, – grado de neuroticismo, nervioso, irritabilidad, seguridad en sí mismo.\n",
+    "- usuario (el nombre en Twitter)\n",
+    "- “op” = Openness to experience – grado de apertura mental a nuevas experiencias, curiosidad, arte\n",
+    "- “co” =Conscientiousness – grado de orden, prolijidad, organización\n",
+    "- “ex” = Extraversion – grado de timidez, solitario o participación ante el grupo social\n",
+    "- “ag” = Agreeableness – grado de empatía con los demás, temperamento\n",
+    "- “ne” = Neuroticism, – grado de neuroticismo, nervioso, irritabilidad, seguridad en sí mismo.\n",
     "Wordcount – Cantidad promedio de palabras usadas en sus tweets\n",
     "Categoria – Actividad laboral del usuario (actor, cantante, etc.)\n",
     "Utilizaremos el algoritmo K-means para que agrupe estos usuarios -no por su actividad laboral- si no, por sus similitudes en la personalidad. Si bien tenemos 8 columnas de entrada, sólo utilizaremos 3 en este ejemplo, de modo que podamos ver en un gráfico tridimensional -y sus proyecciones a 2D- los grupos resultantes. Pero para casos reales, podemos utilizar todas las dimensiones que necesitemos. Una de las hipótesis que podríamos tener es: “Todos los cantantes tendrán personalidad parecida” (y así con cada rubro laboral). Pues veremos si lo probamos, o por el contrario, los grupos no están relacionados necesariamente con la actividad de estas Celebridades.\n",
@@ -217,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,9 +227,7 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     " \n",
     "%matplotlib inline\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "plt.rcParams['figure.figsize'] = (16, 9)\n",
-    "plt.style.use('ggplot')"
+    "from mpl_toolkits.mplot3d import Axes3D\n"
    ]
   },
   {
@@ -247,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +349,7 @@
        "4    47.0645          4  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +508,7 @@
        "max      9.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -617,10 +609,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1994e355450>"
+       "<seaborn.axisgrid.PairGrid at 0x1992abe7410>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -650,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +651,7 @@
        "(140, 3)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,16 +672,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x19953680fd0>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x19958a64d10>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -723,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -846,16 +838,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x19953634710>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x19959843310>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -894,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1039,7 @@
        "4  yellow        31"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1162,7 @@
        "9          9       1.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1197,7 @@
        "array([ 21, 121,  82, 120, 107], dtype=int64)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
